# tgtg-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  credentials.json  encrypt_test.ipynb  example.js  pyproject.toml  setup.cfg  test.ipynb
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml
tests/: conftest.py  constants.py  test_active.py  test_api.py  test_apk.py  test_business.py  test_e2e.py  test_items.py  test_login.py  test_order.py  test_signup.py
tgtg/: __init__.py  cli.py  exceptions.py  google_play_scraper.py
