[tool.poetry]
name = "tgtg"
version = "0.17.0"
description = "Unoffical python client for TooGoodToGo API"
readme = "README.md"
authors = ["Anthony Hivert <anthony.hivert@gmail.com>"]
repository = "https://github.com/ahivert/tgtg-python"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
freezegun = "^1.4.0"
pre-commit = "^3.5.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-responses = "^0.5.1"
responses = "^0.25.0"
typed-ast = "^1.5.5"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.masonry.api"
