[project]
name = "tgtg"
version = "0.18.4"
description = "Unofficial python client for TooGoodToGo API"
readme = "README.md"
authors = [
    { name = "Anthony Hivert", email = "anthony.hivert@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.27.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "freezegun>=1.5.1,<2.0",
    "pytest>=8.3.4,<9.0",
    "pytest-cov>=7.1.0,<8.0",
    "pytest-responses>=0.5.1,<0.6",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=tgtg"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
